# pdfrs

./: .gitattributes  .gitignore  Cargo.toml  Makefile
.github/workflows/: ci.yml
otf/: Cargo.toml  README.md
otf/examples/: subset.rs
otf/src/: lib.rs  packed.rs
otf/src/tables/: cmap.rs  glyf.rs  gpos.rs  head.rs  hhea.rs  hmtx.rs  kern.rs  loca.rs  maxp.rs  mod.rs  name.rs  offset.rs  os2.rs  post.rs
otf/src/tables/cmap/: format12.rs  format4.rs
otf/src/utils/: align_write.rs  limit_read.rs  mod.rs
pdfrs/: Cargo.toml  build.rs
pdfrs-afm/: Cargo.toml  build.rs
pdfrs-afm/src/: lib.rs
pdfrs-macros/: Cargo.toml
pdfrs-macros/src/: lib.rs
pdfrs/src/: document.rs  idseq.rs  lib.rs  page.rs  stream.rs  text.rs  writer.rs
pdfrs/src/fonts/: afm.rs  font.rs  mod.rs  otf.rs
pdfrs/src/layout/: mod.rs  paragraph.rs  style.rs
pdfrs/test/results/: xref_2.txt
pdfrs/tests/: document_test.rs
pdfrs/tests/fixtures/: xref_1.txt
serde_pdf/: Cargo.toml
serde_pdf/src/: de.rs  error.rs  lib.rs  object.rs  ser.rs  stream.rs  string.rs  value.rs
serde_pdf/src/ser/: datetime.rs  raw.rs
