[package]
name = "otf"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
deku = "0.7"
futures-util = "0.3"

[dev-dependencies]
pretty_assertions = "0.6"
