[package]
name = "pdfrs-afm"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[dependencies]
lazy_static = "1.4"

[build-dependencies]
regex = "1.1"
itertools = "0.9"
Inflector = "0.11"

[features]
default = ["helvetica"]

all_fonts = [
  "courier_bold",
  "courier_bold_oblique",
  "courier_oblique",
  "courier",
  "helvetica_bold",
  "helvetica_bold_oblique",
  "helvetica_oblique",
  "helvetica",
  "symbol",
  "times_bold",
  "times_bold_italic",
  "times_italic",
  "times_roman",
  "zapf_dingbats",
]

courier_bold = []
courier_bold_oblique = []
courier_oblique = []
courier = []
helvetica_bold = []
helvetica_bold_oblique = []
helvetica_oblique = []
helvetica = []
symbol = []
times_bold = []
times_bold_italic = []
times_italic = []
times_roman = []
zapf_dingbats = []
