[package]
name = "pdfrs"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_pdf = { path = "../serde_pdf" }
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
pdfrs-macros = { path = "../pdfrs-macros", optional = true }

[build-dependencies]
regex = "1.1"
itertools = "0.8"
Inflector = "0.11"

[features]
default = ["helvetica", "macros"]
macros = ["pdfrs-macros"]

all_fonts = [
  "courier_bold",
  "courier_bold_oblique",
  "courier_oblique",
  "courier",
  "helvetica_bold",
  "helvetica_bold_oblique",
  "helvetica_oblique",
  "helvetica",
  "symbol",
  "times_bold",
  "times_bold_italic",
  "times_italic",
  "times_roman",
  "zapf_dingbats",
]

courier_bold = []
courier_bold_oblique = []
courier_oblique = []
courier = []
helvetica_bold = []
helvetica_bold_oblique = []
helvetica_oblique = []
helvetica = []
symbol = []
times_bold = []
times_bold_italic = []
times_italic = []
times_roman = []
zapf_dingbats = []
