[package]
name = "pdfrs"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[dependencies]
async-std = "1.6"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
pdfrs-afm = { path = "../pdfrs-afm", default-features = false, optional = true }
pin-project = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_pdf = { path = "../serde_pdf" }
thiserror = "1.0"
unicode-linebreak = "0.1"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }
pdfrs-afm = { path = "../pdfrs-afm" }
pdfrs-macros = { path = "../pdfrs-macros" }
pretty_assertions = "0.6"

[features]
default = ["helvetica"]

all_fonts = [
  "courier_bold",
  "courier_bold_oblique",
  "courier_oblique",
  "courier",
  "helvetica_bold",
  "helvetica_bold_oblique",
  "helvetica_oblique",
  "helvetica",
  "symbol",
  "times_bold",
  "times_bold_italic",
  "times_italic",
  "times_roman",
  "zapf_dingbats",
]

afm = []
courier_bold = ["afm", "pdfrs-afm", "pdfrs-afm/courier_bold"]
courier_bold_oblique = ["afm", "pdfrs-afm", "pdfrs-afm/courier_bold_oblique"]
courier_oblique = ["afm", "pdfrs-afm", "pdfrs-afm/courier_oblique"]
courier = ["afm", "pdfrs-afm", "pdfrs-afm/courier"]
helvetica_bold = ["afm", "pdfrs-afm", "pdfrs-afm/helvetica_bold"]
helvetica_bold_oblique = ["afm", "pdfrs-afm", "pdfrs-afm/helvetica_bold_oblique"]
helvetica_oblique = ["afm", "pdfrs-afm", "pdfrs-afm/helvetica_oblique"]
helvetica = ["afm", "pdfrs-afm", "pdfrs-afm/helvetica"]
symbol = ["afm", "pdfrs-afm", "pdfrs-afm/symbol"]
times_bold = ["afm", "pdfrs-afm", "pdfrs-afm/times_bold"]
times_bold_italic = ["afm", "pdfrs-afm", "pdfrs-afm/times_bold_italic"]
times_italic = ["afm", "pdfrs-afm", "pdfrs-afm/times_italic"]
times_roman = ["afm", "pdfrs-afm", "pdfrs-afm/times_roman"]
zapf_dingbats = ["afm", "pdfrs-afm", "pdfrs-afm/zapf_dingbats"]
