[package]
name = "pdfrs"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-compression = { version = "0.3", features = ["futures-io", "zlib"] }
async-std = "1.6"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
futures-io = "0.3"
once_cell = "1.4"
otf = { path = "../otf" }
pdfrs-afm = { path = "../pdfrs-afm", default-features = false, optional = true }
pin-project = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_pdf = { path = "../serde_pdf" }
thiserror = "1.0"
unicode-linebreak = "0.1.1"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "*"

[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }
pdfrs-afm = { path = "../pdfrs-afm" }
pdfrs-macros = { path = "../pdfrs-macros" }
pretty_assertions = "0.7"

[features]
default = ["helvetica"]

all_fonts = [
  "courier_bold",
  "courier_bold_oblique",
  "courier_oblique",
  "courier",
  "helvetica_bold",
  "helvetica_bold_oblique",
  "helvetica_oblique",
  "helvetica",
  "symbol",
  "times_bold",
  "times_bold_italic",
  "times_italic",
  "times_roman",
  "zapf_dingbats",
]

afm = []
courier_bold = ["afm", "pdfrs-afm", "pdfrs-afm/courier_bold"]
courier_bold_oblique = ["afm", "pdfrs-afm", "pdfrs-afm/courier_bold_oblique"]
courier_oblique = ["afm", "pdfrs-afm", "pdfrs-afm/courier_oblique"]
courier = ["afm", "pdfrs-afm", "pdfrs-afm/courier"]
helvetica_bold = ["afm", "pdfrs-afm", "pdfrs-afm/helvetica_bold"]
helvetica_bold_oblique = ["afm", "pdfrs-afm", "pdfrs-afm/helvetica_bold_oblique"]
helvetica_oblique = ["afm", "pdfrs-afm", "pdfrs-afm/helvetica_oblique"]
helvetica = ["afm", "pdfrs-afm", "pdfrs-afm/helvetica"]
symbol = ["afm", "pdfrs-afm", "pdfrs-afm/symbol"]
times_bold = ["afm", "pdfrs-afm", "pdfrs-afm/times_bold"]
times_bold_italic = ["afm", "pdfrs-afm", "pdfrs-afm/times_bold_italic"]
times_italic = ["afm", "pdfrs-afm", "pdfrs-afm/times_italic"]
times_roman = ["afm", "pdfrs-afm", "pdfrs-afm/times_roman"]
zapf_dingbats = ["afm", "pdfrs-afm", "pdfrs-afm/zapf_dingbats"]
